manifest/trilium-next.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: triliumnxt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triliumnxt
  namespace: triliumnxt
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
  - host: triliumnxt.<path:stringreplacesecret#domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: triliumnxt
            port:
              number: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: triliumnxt
  namespace: triliumnxt
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https    
  - name: external
    namespace: gateway
    sectionName: https
  hostnames:
  - "triliumnxt.<path:stringreplacesecret#domain>"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: triliumnxt
      port: 8080
